rnsc/test_data/integration/error/parser/outside_class_directive/static_keyword.rns
; some comment
; another comment
static
.class public HelloWorld
.super java/lang/Object
